Issues: card images not fitting

--- a/blocks/elements-grid/__card/elements-grid__card.css
+++ b/blocks/elements-grid/__card/elements-grid__card.css
@@ -3,7 +3,7 @@
     padding: 0;
     border-radius: 10px;
     width: 100%;
-    /* max-width: 282px; */
+    max-width: 282px;
     background-color: white;
   }
 
